feat: v4 support
